[gd_scene load_steps=4 format=3 uid="uid://rbclityltwly"]

[ext_resource type="Script" uid="uid://bfxi6bsyxdwm1" path="res://Menu/Game Over/game_over.gd" id="1_yvn6w"]
[ext_resource type="Texture2D" uid="uid://dc4s8qipykbdi" path="res://assets/1111.jpg" id="2_odkuw"]
[ext_resource type="FontFile" uid="uid://c50a1jx4w8g1" path="res://assets/Fonts/Xolonium-Regular.ttf" id="3_itgon"]

[node name="Game Over" type="CanvasLayer"]
script = ExtResource("1_yvn6w")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(575.5, 323.75)
scale = Vector2(1.87418, 1.96472)
texture = ExtResource("2_odkuw")

[node name="TitleLabel" type="Label" parent="."]
offset_left = 30.0
offset_top = 114.0
offset_right = 1178.0
offset_bottom = 153.0
theme_type_variation = &"HeaderLarge"
theme_override_fonts/font = ExtResource("3_itgon")
theme_override_font_sizes/font_size = 45
text = "Ups! Perdiste"
horizontal_alignment = 1

[node name="Options" type="VBoxContainer" parent="."]
offset_left = 472.0
offset_top = 355.0
offset_right = 711.0
offset_bottom = 594.0

[node name="RetryButton" type="Button" parent="Options"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_itgon")
text = "Restart"

[node name="Quit" type="Button" parent="Options"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_itgon")
text = "Quit"

[connection signal="pressed" from="Options/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="Options/Quit" to="." method="_on_quit_pressed"]
